src/objects/BulkAsiaOneConfigParams__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Enable__c</fullName>
        <label>Enable</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ip__c</fullName>
        <label>ip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>passwordChallenge__c</fullName>
        <label>passwordChallenge</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>passwordResponse__c</fullName>
        <label>passwordResponse</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>BulkAsiaOneConfigParams</label>
</CustomObject>